--- a/xss/production/test/ms5.html
+++ b/xss/production/test/ms5.html
@@ -39,7 +39,7 @@ function start(resolution)
 	}  
 	window.setTimeout(update, resolution);  
 }  
-                application.clicks = 0;
+                application.clicks = 0
 window.onload = function() 
 {
 	var drawingCanvas = document.getElementById("myCanvas");
@@ -86,20 +86,23 @@ window.onload = function()
 			};
 		    main = g_ui_root.newSwitch(
 	    );
+                main.set_height(250)
                 main.rect(0, 0, 600, 250);
 		    test1 = main.newComponent(
 	    );
 		    lbl1 = test1.newLabel(
 	    "Verdana");
-                lbl1.set_rotation("-0.2");
-                lbl1.text("click smiley");
+                lbl1.set_rotation("-0.2")
+                lbl1.text("click smiley")
                 lbl1.position(270, 200);
 		    btn1 = test1.newButton(
 	    "images/smile_sad_48.png","images/smile_grin_48.png");
-                btn1.set_rotation(0.200000003);
+                btn1.set_rotation(0.200000003)
+                btn1.set_height(50)
 	btn1.click = function()
 	{    
-		lbl1.text("Got " + application.clicks++ + " smileys");
+		application.clicks = application.clicks + 1;
+lbl1.text("Got " + application.clicks + " smileys");
 btn1.set_rotation(btn1.rotation + 0.200000003);
 	};
  btn1.center(50, 50); 
@@ -107,10 +110,12 @@ btn1.set_rotation(btn1.rotation + 0.200000003);
 	    );
 		    pb1 = test2.newProgressBar(
 	    );
+                pb1.set_height(10)
  pb1.center(150, 10); 
 		    btn2 = test2.newImage(
 	    "images/arrow_left.png");
-                btn2.src("images/arrow_left.png");
+                btn2.set_height(20)
+                btn2.src("images/arrow_left.png")
 	btn2.click = function()
 	{    
 		pb1.value(pb1.get_value() - 1);
@@ -118,7 +123,8 @@ btn1.set_rotation(btn1.rotation + 0.200000003);
                 btn2.rect(200, 115, 20, 20);
 		    btn3 = test2.newImage(
 	    "images/arrow_right.png");
-                btn3.src("images/arrow_right.png");
+                btn3.set_height(20)
+                btn3.src("images/arrow_right.png")
 	btn3.click = function()
 	{    
 		pb1.value(pb1.get_value() + 1);
@@ -126,11 +132,12 @@ btn1.set_rotation(btn1.rotation + 0.200000003);
                 btn3.rect(380, 115, 20, 20);
 		    lbl2 = test2.newLabel(
 	    "Verdana");
-                lbl2.set_rotation(0.200000003);
-                lbl2.text("click small arrows to adjust percentage");
+                lbl2.set_rotation(0.200000003)
+                lbl2.text("click small arrows to adjust percentage")
                 lbl2.position(210, 200);
 		    btnNext = g_ui_root.newButton(
 	    "images/arrow_right_green_48.png","images/arrow_right_48.png");
+                btnNext.set_height(50)
 	btnNext.click = function()
 	{    
 		if (main.get_active() < main.count() - 1)
@@ -142,7 +149,8 @@ btnNext.set_rotation(btnNext.rotation + 0.200000003);
                 btnNext.rect(320, 300, 100, 50);
 		    btnPrev = g_ui_root.newButton(
 	    "images/arrow_left_green_48.png","images/arrow_left_48.png");
-                btnPrev.set_rotation(0.400000006);
+                btnPrev.set_rotation(0.400000006)
+                btnPrev.set_height(50)
 	btnPrev.click = function()
 	{    
 		if (main.get_active() > 0)
