--- a/xss/production/test/ms4.html
+++ b/xss/production/test/ms4.html
@@ -35,7 +35,7 @@ function start(resolution)
 		g_sequence_manager.update(g_delta);
 		var context = g_canvas.getContext('2d');
 		g_ui.update(g_delta, context);
-		window.setTimeout(update, resolution);  
+        window.setTimeout(update, resolution);  
 	}  
 	window.setTimeout(update, resolution);  
 }  
@@ -118,7 +118,8 @@ window.onload = function()
 			};
 		    img1 = g_ui_root.newImage(
 	    "images/img1.png");
-                img1.src("images/img1.png");
+                img1.src("images/img1.png")
+                img1.set_height(50)
 	img1.click = function()
 	{    
 		fade1.start();
