--- a/xss/production/test/box2d2.html
+++ b/xss/production/test/box2d2.html
@@ -158,7 +158,8 @@ window.onload = function()
 			};
 		    btn1 = g_ui_root.newButton(
 	    "images/smile_sad_48.png","images/smile_grin_48.png");
-                btn1.set_rotation(0.200000003);
+                btn1.set_rotation(0.200000003)
+                btn1.set_height(50)
 	btn1.collision = function()
 	{    
 		console.log("Collision!");
