--- a/xss/production/test/resources_demo.html
+++ b/xss/production/test/resources_demo.html
@@ -88,9 +88,9 @@ if (g_elapsed < 0)
 else
 g_delta  = now - g_elapsed;  
 g_elapsed = now; 
-		cube_1.rotation.y += (application.x_target_rotation - cube_1.rotation.y) * 0.0500000007;
+		cube_1.rotation.y = cube_1.rotation.y + (application.x_target_rotation - cube_1.rotation.y) * 0.0500000007;
 plane_1.rotation.z = cube_1.rotation.y;
-cube_1.rotation.x += (application.y_target_rotation - cube_1.rotation.x) * 0.0500000007;
+cube_1.rotation.x = cube_1.rotation.x + (application.y_target_rotation - cube_1.rotation.x) * 0.0500000007;
 		set_active_camera(camera_1);
 }
 var materials = 
@@ -123,38 +123,38 @@ new THREE.Scene(
 var camera_1 = 
 new THREE.Camera(
 70,1.5,1,1000);
-                camera_1.position.y = 300;
-                camera_1.position.z = 500;
+                .y = 300
+                .z = 500
 	var cube_1_cube = 
 new THREE.Cube(
 200,200,200);
 	var cube_1 = new THREE.Mesh(cube_1_cube,
 	);
 	scene.addObject(cube_1);
-                cube_1.position.y = 150;
+                .y = 150
 	var plane_1_plane = 
 new THREE.Plane(
 200,200);
 	var plane_1 = new THREE.Mesh(plane_1_plane,
 	);
 	scene.addObject(plane_1);
-                plane_1.rotation.x = -1.57;
+                .x = -1.57
 	var sound_w_id_12 = new THREE.Sound(g_streamer.get_resource('sound_1').asset
 	,700,20,true
 	);
 	scene.addObject(sound_w_id_12);
 	sound_w_id_12.play();
-                application.x_target_rotation = 0;
-                application.x_target_rotation_on_mouse_down = 0;
-                application.mouse_x = 0;
-                application.mouse_x_on_mouse_down = 0;
-                application.y_target_rotation = 0;
-                application.y_target_rotation_on_mouse_down = 0;
-                application.mouse_y = 0;
-                application.mouse_y_on_mouse_down = 0;
-                application.window_half_x = window.innerWidth / 2;
-                application.window_half_y = window.innerHeight / 2;
-                application.is_mouse_down = false;
+                application.x_target_rotation = 0
+                application.x_target_rotation_on_mouse_down = 0
+                application.mouse_x = 0
+                application.mouse_x_on_mouse_down = 0
+                application.y_target_rotation = 0
+                application.y_target_rotation_on_mouse_down = 0
+                application.mouse_y = 0
+                application.mouse_y_on_mouse_down = 0
+                application.window_half_x = window.innerWidth / 2
+                application.window_half_y = window.innerHeight / 2
+                application.is_mouse_down = false
 	document.addEventListener( 'mousedown', mousedown_application, false );
 	function mousedown_application (event)
 	{
