--- a/xss/production/test/transform.html
+++ b/xss/production/test/transform.html
@@ -44,7 +44,7 @@ g_delta  = now - g_elapsed;
 g_elapsed = now; 
 		if (application.is_ctrl_down)
 {
-application.theta += application.mouse_x * 3;
+application.theta = application.theta + application.mouse_x * 3;
 }
 camera_1.position.x = 1400 * Math.sin(application.theta * Math.PI / 360);
 camera_1.position.z = 1400 * Math.cos(application.theta * Math.PI / 360);
@@ -65,23 +65,23 @@ new THREE.Scene(
 var camera_1 = 
 new THREE.Camera(
 75,1.5,1,3000);
-                camera_1.position.z = 1000;
+                .z = 1000
 var light = 
 new THREE.DirectionalLight(
 );
 		;
 	scene.addLight(light);
-                light.position.y = 0.5;
-                light.position.z = 1;
+                .y = 0.5
+                .z = 1
 	var cylinder_1_cylinder = 
 new THREE.Cylinder(
 500);
 	var cylinder_1 = new THREE.Mesh(cylinder_1_cylinder,
 	);
 	scene.addObject(cylinder_1);
-                cylinder_1.rotation.x = 10;
-                cylinder_1.rotation.y = 10;
-                cylinder_1.position.x = 600;
+                .x = 10
+                .y = 10
+                .x = 600
 var container = 
 new THREE.Object3D(
 );
@@ -93,10 +93,10 @@ new THREE.Cube(
 	scene.addObject(cube_1);
 				container.addChild(cube_1);
 				scene.addObject(container);
-                cube_1.position.x = -600;
-                cube_1.position.y = -100;
-                cube_1.rotation.x = 10;
-                cube_1.rotation.y = 10;
+                .x = -600
+                .y = -100
+                .x = 10
+                .y = 10
 	var sphere_1_sphere = 
 new THREE.Sphere(
 200);
@@ -105,13 +105,13 @@ new THREE.Sphere(
 	scene.addObject(sphere_1);
 				container.addChild(sphere_1);
 				scene.addObject(container);
-                sphere_1.position.x = -400;
-                sphere_1.position.y = 400;
-                application.is_shift_down = false;
-                application.is_ctrl_down = false;
-                application.theta = 45;
-                application.mouse_x = null;
-                application.mouse_y = null;
+                .x = -400
+                .y = 400
+                application.is_shift_down = false
+                application.is_ctrl_down = false
+                application.theta = 45
+                application.mouse_x = null
+                application.mouse_y = null
 	document.addEventListener( 'mousemove', mousemove_application, false );
 	function mousemove_application (event)
 	{
@@ -121,9 +121,9 @@ new THREE.Sphere(
 application.mouse_y = -(y / window.innerHeight) * 2 + 1;
 if (application.is_shift_down)
 {
-container.rotation.x += 0.0199999996;
-container.rotation.y += 0.0199999996;
-container.rotation.z += 0.0199999996;
+container.rotation.x = container.rotation.x + 0.0199999996;
+container.rotation.y = container.rotation.y + 0.0199999996;
+container.rotation.z = container.rotation.z + 0.0199999996;
 }
 else
 {
@@ -132,9 +132,9 @@ if (application.is_ctrl_down)
 }
 else
 {
-cylinder_1.rotation.x += 0.0199999996;
-cylinder_1.rotation.y += 0.0199999996;
-cylinder_1.rotation.z += 0.0199999996;
+cylinder_1.rotation.x = cylinder_1.rotation.x + 0.0199999996;
+cylinder_1.rotation.y = cylinder_1.rotation.y + 0.0199999996;
+cylinder_1.rotation.z = cylinder_1.rotation.z + 0.0199999996;
 }
 }
 	};
