--- a/xss/production/test/cameras.html
+++ b/xss/production/test/cameras.html
@@ -81,88 +81,88 @@ new THREE.Scene(
 	var camera_1 = new THREE.QuakeCamera({
 	fov:50,aspect:1.5,near:1,far:10000,lookSpeed:0.0500000007,noFly:true
 	});
-                .x = -250
-                .y = 25
+                camera_1.position.x = -250
+                camera_1.position.y = 25
 var camera_2 = 
 new THREE.Camera(
 50,1.5,1,10000);
-                .x = -250
-                .y = 25
+                camera_2.position.x = -250
+                camera_2.position.y = 25
 var light = 
 new THREE.DirectionalLight(
 );
 		;
 	scene.addLight(light);
-                .y = 0.5
-                .z = 1
+                light.position.y = 0.5
+                light.position.z = 1
 	var sphere_1_sphere = 
 new THREE.Sphere(
 20);
 	var sphere_1 = new THREE.Mesh(sphere_1_sphere,
 	);
 	scene.addObject(sphere_1);
-                .x = 250
-                .y = 30
+                sphere_1.position.x = 250
+                sphere_1.position.y = 30
 	var sphere_2_sphere = 
 new THREE.Sphere(
 20);
 	var sphere_2 = new THREE.Mesh(sphere_2_sphere,
 	);
 	scene.addObject(sphere_2);
-                .x = -250
-                .y = 30
+                sphere_2.position.x = -250
+                sphere_2.position.y = 30
 	var cylinder_1_cylinder = 
 new THREE.Cylinder(
 50);
 	var cylinder_1 = new THREE.Mesh(cylinder_1_cylinder,
 	);
 	scene.addObject(cylinder_1);
-                .x = 10
-                .y = 10
-                .x = 100
-                .y = 30
-                .z = 100
+                cylinder_1.rotation.x = 10
+                cylinder_1.rotation.y = 10
+                cylinder_1.position.x = 100
+                cylinder_1.position.y = 30
+                cylinder_1.position.z = 100
 	var cylinder_2_cylinder = 
 new THREE.Cylinder(
 50);
 	var cylinder_2 = new THREE.Mesh(cylinder_2_cylinder,
 	);
 	scene.addObject(cylinder_2);
-                .x = 10
-                .y = 10
-                .x = -100
-                .y = 30
-                .z = 100
+                cylinder_2.rotation.x = 10
+                cylinder_2.rotation.y = 10
+                cylinder_2.position.x = -100
+                cylinder_2.position.y = 30
+                cylinder_2.position.z = 100
 	var cube_1_cube = 
 new THREE.Cube(
 30,30,30);
 	var cube_1 = new THREE.Mesh(cube_1_cube,
 	);
 	scene.addObject(cube_1);
-                .x = -100
-                .y = 30
-                .z = -100
-                .x = 10
-                .y = 10
+                cube_1.position.x = -100
+                cube_1.position.y = 30
+                cube_1.position.z = -100
+                cube_1.rotation.x = 10
+                cube_1.rotation.y = 10
 	var cube_2_cube = 
 new THREE.Cube(
 30,30,30);
 	var cube_2 = new THREE.Mesh(cube_2_cube,
 	);
 	scene.addObject(cube_2);
-                .x = 100
-                .y = 30
-                .z = -100
-                .x = 10
-                .y = 10
+                cube_2.position.x = 100
+                cube_2.position.y = 30
+                cube_2.position.z = -100
+                cube_2.rotation.x = 10
+                cube_2.rotation.y = 10
 	var plane_1_plane = 
 new THREE.Plane(
 1000,1000);
 	var plane_1 = new THREE.Mesh(plane_1_plane,
 	);
 	scene.addObject(plane_1);
-                .y = 0.100000001
-                .x = -1.57
+                plane_1.position.y = 0.100000001
+                plane_1.rotation.x = -1.57
                 application.is_ctrl_down = false
                 application.is_shift_down = false
 	document.addEventListener( 'keydown', keydown_application, false );
