--- a/xss/production/test/resources_demo.html
+++ b/xss/production/test/resources_demo.html
@@ -123,22 +123,22 @@ new THREE.Scene(
 var camera_1 = 
 new THREE.Camera(
 70,1.5,1,1000);
-                .y = 300
-                .z = 500
+                camera_1.position.y = 300
+                camera_1.position.z = 500
 	var cube_1_cube = 
 new THREE.Cube(
 200,200,200);
 	var cube_1 = new THREE.Mesh(cube_1_cube,
 	);
 	scene.addObject(cube_1);
-                .y = 150
+                cube_1.position.y = 150
 	var plane_1_plane = 
 new THREE.Plane(
 200,200);
 	var plane_1 = new THREE.Mesh(plane_1_plane,
 	);
 	scene.addObject(plane_1);
-                .x = -1.57
+                plane_1.rotation.x = -1.57
 	var sound_w_id_12 = new THREE.Sound(g_streamer.get_resource('sound_1').asset
 	,700,20,true
 	);
