--- a/xss/production/test/transform.html
+++ b/xss/production/test/transform.html
@@ -65,23 +65,23 @@ new THREE.Scene(
 var camera_1 = 
 new THREE.Camera(
 75,1.5,1,3000);
-                .z = 1000
+                camera_1.position.z = 1000
 var light = 
 new THREE.DirectionalLight(
 );
 		;
 	scene.addLight(light);
-                .y = 0.5
-                .z = 1
+                light.position.y = 0.5
+                light.position.z = 1
 	var cylinder_1_cylinder = 
 new THREE.Cylinder(
 500);
 	var cylinder_1 = new THREE.Mesh(cylinder_1_cylinder,
 	);
 	scene.addObject(cylinder_1);
-                .x = 10
-                .y = 10
-                .x = 600
+                cylinder_1.rotation.x = 10
+                cylinder_1.rotation.y = 10
+                cylinder_1.position.x = 600
 var container = 
 new THREE.Object3D(
 );
@@ -93,10 +93,10 @@ new THREE.Cube(
 	scene.addObject(cube_1);
 				container.addChild(cube_1);
 				scene.addObject(container);
-                .x = -600
-                .y = -100
-                .x = 10
-                .y = 10
+                cube_1.position.x = -600
+                cube_1.position.y = -100
+                cube_1.rotation.x = 10
+                cube_1.rotation.y = 10
 	var sphere_1_sphere = 
 new THREE.Sphere(
 200);
@@ -105,8 +105,8 @@ new THREE.Sphere(
 	scene.addObject(sphere_1);
 				container.addChild(sphere_1);
 				scene.addObject(container);
-                .x = -400
-                .y = 400
+                sphere_1.position.x = -400
+                sphere_1.position.y = 400
                 application.is_shift_down = false
                 application.is_ctrl_down = false
                 application.theta = 45
