--- a/xss/production/test/box2d2.html
+++ b/xss/production/test/box2d2.html
@@ -17,6 +17,7 @@ var g_delta = 0.0;
 var g_canvas;
 var g_ui_root;
 var application = {};
+		var streamer = new ms.streamer.Streamer();
          var   b2Vec2 = Box2D.Common.Math.b2Vec2
             ,  b2AABB = Box2D.Collision.b2AABB
          	,	b2BodyDef = Box2D.Dynamics.b2BodyDef
@@ -34,27 +35,24 @@ var application = {};
                new b2Vec2(0, 10)    //gravity
             ,  true                 //allow sleep
          );
-        var g_step_collisions = [];
-        var contactListener = new Box2D.Dynamics.b2ContactListener;
-        contactListener.BeginContact = function(contact, manifold) 
-        {
-            function get_collider(body)
+         var g_world_scale = 30;
+         var fixDef = new b2FixtureDef;
+         var bodyDef = new b2BodyDef;
+        var def_package_items = [];
+                def_package_items.push(
             {
-                if (body.host && ("collision" in body.host))
-                    return body.host;
-                return null;
-            }
-            var host1 = get_collider(contact.GetFixtureA().GetBody());
-            var host2 = get_collider(contact.GetFixtureB().GetBody());
-            if (host1)
-                g_step_collisions.push({host1: host1, host2:host2, contact: contact, manifold:manifold});
-            if (host2)
-                g_step_collisions.push({host1: host2, host2:host1, contact: contact, manifold:manifold});
-        };
-        g_world.SetContactListener(contactListener);
-        var g_world_scale = 30;
-        var fixDef = new b2FixtureDef;
-        var bodyDef = new b2BodyDef;
+		id:"",
+		resource_type:RESOURCE_IMAGE,
+		src:"images/smile_grin_48.png"
+});
+                def_package_items.push(
+            {
+		id:"",
+		resource_type:RESOURCE_IMAGE,
+		src:"images/smile_sad_48.png"
+});
+        var g_startup_package = new ms.streamer.Package(streamer, def_package_items);	
+		g_startup_package.load();	
 function start(resolution)  
 {  
 	var start = new Date().getTime();  
@@ -69,31 +67,6 @@ function start(resolution)
         g_world.Step(1 / 60, 10, 10);
         g_world.DrawDebugData();
         g_world.ClearForces();
-        //process collisions
-        for(var i = 0; i < g_step_collisions.length; i++)
-        {
-            var info = g_step_collisions[i];
-            info.host1.collision(info.host2, info.contact, info.manifold);
-        }
-        g_step_collisions = [];
-        //process contacts
-        function get_contact_handler(body)
-        {
-            if (body.host && ("contact" in body.host))
-                return body.host;
-            return null;
-        }
-        var cc = g_world.GetContactList();
-        while(cc)
-        {
-            var host1 = get_contact_handler(cc.GetFixtureA().GetBody());
-            var host2 = get_contact_handler(cc.GetFixtureB().GetBody());
-            if (host1)
-                host1.contact(host2, cc);
-            if (host2)
-                host2.contact(host1, cc);
-            cc = cc.GetNext();
-        }
         //synch
         var bb = g_world.GetBodyList();
         while(bb)
@@ -105,12 +78,12 @@ function start(resolution)
             }    
             var angle = bb.GetAngle();
             var pos   = bb.GetTransform().position;
-            if (bb.host)
+            if (bb.xs_visual)
             {
                 var x = pos.x*g_world_scale;
                 var y = pos.y*g_world_scale;
-                bb.host.position(x - bb.host.w/2, y - bb.host.h/2);
-                bb.host.set_rotation(angle);
+                bb.xs_visual.position(x - bb.xs_visual.w/2, y - bb.xs_visual.h/2);
+                bb.xs_visual.set_rotation(angle);
             }
             bb = bb.GetNext();
         }
@@ -122,6 +95,7 @@ function start(resolution)
 }  
 window.onload = function() 
 {
+	var Sound = new ms.ui.Sound();
 	var drawingCanvas = document.getElementById("myCanvas");
 	g_canvas = drawingCanvas;
 	if (drawingCanvas && drawingCanvas.getContext)
@@ -132,18 +106,9 @@ window.onload = function()
 			height: 400,
 			canvas: drawingCanvas
 		};
-		var streamer = new ms.streamer.Streamer();
 		var ui = new ms.ui.Manager(client, streamer);
-		var resources = new ms.streamer.PackageContainer();
 		g_ui = ui;
         g_ui_root = ui.root;
-        var ui_images = 
-        [
-				    'images/smile_grin_48.png',
-				    'images/smile_sad_48.png',
-        ];
-		ui.load_images(ui_images, function()
-		{
 			drawingCanvas.onmousemove = function(ev)
 			{
 				ui.mouse_move(ev.clientX, ev.clientY);                  
@@ -156,14 +121,22 @@ window.onload = function()
 			{
 				ui.mouse_up(ev.clientX, ev.clientY);                  
 			};
-		    btn1 = g_ui_root.newButton(
-	    "images/smile_sad_48.png","images/smile_grin_48.png");
+			document.onkeydown = function(ev)
+			{
+				ui.key_down(ev.keyCode);                  
+			};
+			document.onkeyup = function(ev)
+			{
+				ui.key_up(ev.keyCode);                  
+			};
+			document.onkeypress = function(ev)
+			{
+				ui.key_press(ev.keyCode);                  
+			};
+		    btn1 = new ms.ui.Button( 
+	    "images/smile_sad_48.png","images/smile_grin_48.png",g_ui_root.manager, g_ui_root);
                 btn1.set_rotation(0.200000003)
                 btn1.set_height(50)
-	btn1.collision = function(other)
-	{    
-		console.log("Collision!");
-	};
                 btn1.rect(200, 200, 50, 50);
              fixDef.density = 1;
              fixDef.friction = 0.5;
@@ -175,7 +148,7 @@ window.onload = function()
             current_body = g_world.CreateBody(bodyDef);
             current_body.CreateFixture(fixDef);
                 btn1.physics = current_body;
-                current_body.host = btn1;
+                current_body.xs_visual = btn1;
              fixDef.density = 1;
              fixDef.friction = 0.5;
              fixDef.restitution = 0.200000003;
@@ -199,8 +172,7 @@ window.onload = function()
                 application.init();
             }
 			start();
-			ui.draw(drawingCanvas.getContext('2d'));
-		});
+			ui.draw(drawingCanvas.getContext('2d'));		
 	}
 }
 </script>
@@ -209,5 +181,8 @@ window.onload = function()
 	<canvas id="myCanvas" width="600" height="400">
 		<p>Your browser doesn't support canvas.</p>
 	</canvas>
+	<audio id="sounds" preload> 
+	Your browser does not support the audio element.
+	</audio>
 </body>
 </html>
